--- a/angular-2-getting-started/app/products/product-list.component.html
+++ b/angular-2-getting-started/app/products/product-list.component.html
@@ -20,7 +20,7 @@
                 <thead>
                     <tr>
                         <th>
-                            <button class="btn <btn-primary></btn-primary>"
+                            <button class="btn btn-primary"
                                 (click)='toggleImage()'>
                                 {{ showImage ? 'Hide' : 'Show' }} Image
                             </button>
