--- a/angular-2-getting-started/app/products/product-list.component.html
+++ b/angular-2-getting-started/app/products/product-list.component.html
@@ -42,7 +42,7 @@
                                 [style.margin.px]='imageMargin'
                                 alt="">
                         </td>
-                        <td>{{ product.productName }}</td>
+                        <td><a [routerLink]="['/product', product.productId]">{{ product.productName }}</a></td>
                         <td>{{ product.productCode | lowercase }}</td>
                         <td>{{ product.releaseDate }}</td>
                         <td>{{ product.price | currency:'GBP':true:'1.2-2' }}</td>
