--- a/ps-angular-2-forms/src/app/app.component.html
+++ b/ps-angular-2-forms/src/app/app.component.html
@@ -1,4 +1,4 @@
-<h3>
+<!--<h3>
   Angular 2 Seed
 </h3>
 <nav>
@@ -17,13 +17,8 @@
 	<a [routerLink]="['/contact']">
     Contact Us
   </a>
-</nav>
+</nav>-->
 
 <main>
 	<router-outlet></router-outlet>
 </main>
-
-
-<footer>
-  © 2016
-</footer>
