--- a/ps-angular-2-forms/src/app/home/home.component.html
+++ b/ps-angular-2-forms/src/app/home/home.component.html
@@ -1,7 +1,41 @@
-<h3>Angular 2 Forms</h3>
-<form #form="ngForm" novalidate>
-    <input type="text" required placeholder="Name" name="name" ngModel>
-    <button type="submit">Ok</button>
-</form>
+<div class="container">
+    <h3>Employee Forms</h3>
+    <form #form="ngForm" novalidate>
+        <div class="form-group">
+            <label for="firstNameId">First Name</label>
+            <input type="text" class="form-control" required name="firstName" ngModel>
+        </div>
+        <div class="form-group">
+            <label for="lastNameId">Last Name</label>
+            <input type="text" class="form-control" required name="lastName" ngModel>
+        </div>
+        <button type="submit" class="btn btn-primary">Ok</button>
+    </form>
 
-{{ form.pristine }}
+    <div class="checkbox">
+        <label for="">
+            <input type="checkbox" name="is-full-time" ngModel> Full Time Emloyee
+        </label>
+    </div>
+
+    <label>Payment type</label>
+    <div class="radio">
+        <label for="">
+            <input type="radio" name="pay-type" value="W2" checked> W2
+        </label>
+    </div>
+    <div class="radio">
+        <label for="">
+            <input type="radio" name="pay-type" value="1099"> 1099
+        </label>
+    </div>
+
+    <div class="form-group">
+        <label for="">Primary Language</label>
+        <select name="" id="" class="form-control">
+            <option value="" *ngFor="let lang of languages">
+                {{ lang }}
+            </option>
+        </select>
+    </div>
+</div>
