--- a/ps-angular-2-forms/src/app/home/home.component.html
+++ b/ps-angular-2-forms/src/app/home/home.component.html
@@ -3,39 +3,43 @@
     <form #form="ngForm" novalidate>
         <div class="form-group">
             <label for="firstNameId">First Name</label>
-            <input type="text" class="form-control" required name="firstName" ngModel>
+            <input type="text" class="form-control" required name="firstName" [(ngModel)]="model.firstName">
         </div>
-        <div class="form-group">
+        
+        <!--<div class="form-group">
             <label for="lastNameId">Last Name</label>
             <input type="text" class="form-control" required name="lastName" ngModel>
+        </div>-->
+
+        <div class="checkbox">
+            <label for="">
+            <input type="checkbox" name="is-full-time" [(ngModel)]="model.isFullTime"> Full Time Emloyee
+        </label>
         </div>
-        <button type="submit" class="btn btn-primary">Ok</button>
-    </form>
 
-    <div class="checkbox">
-        <label for="">
-            <input type="checkbox" name="is-full-time" ngModel> Full Time Emloyee
+        <label>Payment type</label>
+        <div class="radio">
+            <label for="">
+            <input type="radio" name="paymentType" value="W2" checked [(ngModel)]="model.paymentType"> W2
         </label>
-    </div>
+        </div>
+        <div class="radio">
+            <label for="">
+            <input type="radio" name="paymentType" value="1099" [(ngModel)]="model.paymentType"> 1099
+        </label>
+        </div>
 
-    <label>Payment type</label>
-    <div class="radio">
-        <label for="">
-            <input type="radio" name="pay-type" value="W2" checked> W2
-        </label>
-    </div>
-    <div class="radio">
-        <label for="">
-            <input type="radio" name="pay-type" value="1099"> 1099
-        </label>
-    </div>
-
-    <div class="form-group">
-        <label for="">Primary Language</label>
-        <select name="" id="" class="form-control">
-            <option value="" *ngFor="let lang of languages">
+        <div class="form-group">
+            <label for="">Primary Language</label>
+            <select name="primaryLanguage" class="form-control" [(ngModel)]="model.primaryLanguage">
+            <option *ngFor="let lang of languages">
                 {{ lang }}
             </option>
         </select>
-    </div>
+        </div>
+
+        <!--<button type="submit" class="btn btn-primary">Ok</button>-->
+    </form>
+    Model: {{ model | json}}
+    <br/> Angular: {{ form.value | json }}
 </div>
