--- a/ps-angular-2-forms/src/app/home/home.component.html
+++ b/ps-angular-2-forms/src/app/home/home.component.html
@@ -1,17 +1,23 @@
 <div class="container">
     <h3>Employee Forms</h3>
     <form #form="ngForm" novalidate>
-        <div class="form-group">
-            <label for="firstNameId">First Name</label>
-            <input type="text" class="form-control" required name="firstName" [(ngModel)]="model.firstName">
+        <div class="form-group" [class.has-error]="firstName.invalid && firstName.dirty">
+            <label class="control-label" for="firstNameId">First Name</label>
+            <input #firstName="ngModel" pattern="^Q" type="text" class="form-control" required name="firstName" [(ngModel)]="model.firstName">
+            <div *ngIf="firstName.invalid && firstName.dirty" class="alert alert-danger">
+                First Name is required.
+            </div>
         </div>
+
+        <!--<h3>Classes</h3>
+        <h4>{{ firstName.dirty }}</h4>-->
 
         <!--<div class="form-group">
             <label for="lastNameId">Last Name</label>
             <input type="text" class="form-control" required name="lastName" ngModel>
         </div>-->
 
-        <div class="checkbox">
+        <!--<div class="checkbox">
             <label for="">
             <input type="checkbox" name="is-full-time" [(ngModel)]="model.isFullTime"> Full Time Emloyee
         </label>
@@ -27,19 +33,22 @@
             <label for="">
             <input type="radio" name="paymentType" value="1099" [(ngModel)]="model.paymentType"> 1099
         </label>
-        </div>
+        </div>-->
 
-        <div class="form-group">
-            <label for="">Primary Language</label>
-            <select name="primaryLanguage" class="form-control" [(ngModel)]="model.primaryLanguage">
-            <option *ngFor="let lang of languages">
-                {{ lang }}
-            </option>
-        </select>
+        <div class="form-group" [class.has-error]="hasPrimaryLanguageError">
+            <label class="control-label" for="">Primary Language</label>
+            <select name="primaryLanguage" #primaryLanguage class="form-control" 
+                    [(ngModel)]="model.primaryLanguage" 
+                    (blur)="valdatePrimaryLanguage(primaryLanguage.value)"
+                    (change)="valdatePrimaryLanguage(primaryLanguage.value)">
+                <option value="default">Select a Language...</option>
+                <option *ngFor="let lang of languages">
+                    {{ lang }}
+                </option>
+            </select>
         </div>
-
-        <!--<button type="submit" class="btn btn-primary">Ok</button>-->
+        <button type="submit" class="btn btn-primary">Ok</button>
     </form>
-    Model: {{ model | json}}
-    <br/> Angular: {{ form.value | json }}
+    <!--Model: {{ model | json}}
+    <br/> Angular: {{ form.value | json }}-->
 </div>
