--- a/ps-angular-2-forms/src/app/home/home.component.html
+++ b/ps-angular-2-forms/src/app/home/home.component.html
@@ -1,4 +1,19 @@
-<div class="container" *ngIf="languages.length == 0">Loading :-)</div>
+<h3>Angular 2 Forms</h3>
+
+<div class="container">
+    <form>
+        <div class="form-group" style="display: inline-block;">
+            <datepicker name="startDate" [(ngModel)]="startDate"
+            [showWeeks]="false"
+            [datepickerMode]="'year'">
+            </datepicker>
+        </div>
+    </form>
+</div>
+
+<h3>{{ startDate }}</h3>
+
+<!--<div class="container" *ngIf="languages.length == 0">Loading :-)</div>
 <div class="container" *ngIf="languages.length > 0">
     <h3>Employee Forms</h3>
     <form #form="ngForm" (submit)="submitForm(form)" novalidate>
@@ -8,7 +23,7 @@
             <div *ngIf="firstName.invalid && firstName.dirty" class="alert alert-danger">
                 First Name is required.
             </div>
-        </div>
+        </div>-->
 
         <!--<h3>Classes</h3>
         <h4>{{ firstName.dirty }}</h4>-->
@@ -34,7 +49,7 @@
             <label for="">
             <input type="radio" name="paymentType" value="1099" [(ngModel)]="model.paymentType"> 1099
         </label>
-        </div>-->
+        </div>
 
         <div class="form-group" [class.has-error]="hasPrimaryLanguageError">
             <label class="control-label" for="">Primary Language</label>
@@ -56,4 +71,4 @@
     </form>
     <!--Model: {{ model | json}}
     <br/> Angular: {{ form.value | json }}-->
-</div>
+<!--</div>-->
