--- a/angular2-by-example/trainer/src/components/workout-runner/workout-runner.html
+++ b/angular2-by-example/trainer/src/components/workout-runner/workout-runner.html
@@ -14,6 +14,8 @@
                 </div>
                 <h1>Time Remaining:{{currentExercise.duration - exerciseRunningDuration}}
                 </h1>
+                <!--<h3>{{ test1 }}</h3>
+                <h3>{{ test2 }}</h3>-->
             </div>
         </div>
     </div>
