--- a/ng2-fundamentals/app/nav/navbar.component.html
+++ b/ng2-fundamentals/app/nav/navbar.component.html
@@ -1,22 +1,23 @@
 <div class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" >ngEvents</a>
+      <a class="navbar-brand">ngEvents</a>
     </div>
 
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
         <li>
-          <a [routerLink]="['/events']" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">All Events</a>
+          <a [routerLink]="['/events']" routerLinkActive="active" [routerLinkActiveOptions]="{exact:
+true}">All Events</a>
         </li>
         <li><a [routerLink]="['/events/new']" routerLinkActive="active">Create Event</a></li>
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" >
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">
             Events
             <span class="caret"></span>
           </a>
           <ul class="dropdown-menu">
-            <li >
+            <li>
               <a href="">Angular Connect</a>
             </li>
           </ul>
@@ -25,19 +26,25 @@
       <div class="navbar-header navbar-right">
         <ul class="nav navbar-nav">
           <li>
-            <a *ngIf="!auth.isAuthenticated()" [routerLink]="['user/login']">Login</a>
-            <a *ngIf="auth.isAuthenticated()" [routerLink]="['user/profile']">Welcome {{ auth.currentUser.firstName }}</a>
+            <a [hidden]="!auth.isAuthenticated()" [routerLink]="['user/profile']">Welcome {{auth.currentUser?.firstName}}</a>
+            <a [hidden]="auth.isAuthenticated()" [routerLink]="['user/login']">Login</a>
           </li>
         </ul>
       </div>
-      <form id="searchForm"  class="navbar-form navbar-right"  >
+      <form id="searchForm" (ngSubmit)="searchSessions(searchTerm)" class="navbar-form navbar-right">
         <div class="form-group">
-          <input type="text" class="form-control" placeholder="Search Sessions" >
+          <input [(ngModel)]="searchTerm" name="searchTerm" type="text" class="form-control" placeholder="Search Sessions">
         </div>
-        <button class="btn btn-default" >
+        <button class="btn btn-default" modal-trigger="searchResults">
           Search
         </button>
       </form>
     </div>
   </div>
 </div>
+
+<simple-modal closeOnBodyClick="true" elementId="searchResults" title="Matching Sessions">
+  <div class="list-group">
+    <a class="list-group-item" *ngFor="let session of foundSessions" [routerLink]="['/events', session.eventId]">{{session.name}}</a>
+  </div>
+</simple-modal>
