--- a/ng2-fundamentals/app/events/event-details/event-details.component.html
+++ b/ng2-fundamentals/app/events/event-details/event-details.component.html
@@ -11,23 +11,25 @@
     <div class="col-md-6">
       <div><strong>Date:</strong> {{event?.date | date:'shortDate'}}</div>
       <div><strong>Time:</strong> {{event?.time}}</div>
-      <div><strong>Price:</strong> ${{event?.price | currency:'USD':true}}</div>
+      <div><strong>Price:</strong> {{event?.price | currency:'USD':true}}</div>
     </div>
     <div class="col-md-6">
       <address>
-        <strong>Address:</strong><br /> {{event?.location?.address}}
-        <br /> {{event?.location?.city}}, {{event?.location?.country}}
+        <strong>Address:</strong><br />
+        {{event?.location?.address}}<br />
+        {{event?.location?.city}}, {{event?.location?.country}}
       </address>
     </div>
   </div>
 
-  <hr>
+  <hr/>
 
-  <div class="row" style="margin-bottom:10px;">
+
+
+  <div class="row" style="margin-bottom:10px">
     <div class="col-md-2">
       <h3 style="margin:0">Sessions</h3>
     </div>
-
     <div class="col-md-7">
       <div class="btn-group btn-group-sm" style="margin-right:20px;margin-left:20px">
         <button class="btn btn-default" [class.active]="sortBy==='name'" (click)="sortBy='name'">By Name</button>
@@ -41,13 +43,11 @@
         <button class="btn btn-default" [class.active]="filterBy==='advanced'" (click)="filterBy='advanced'">Advanced</button>
       </div>
     </div>
-
     <div class="col-md-2">
       <a (click)="addSession()">Add Session</a>
     </div>
   </div>
 
-  <session-list [sortBy]="sortBy" [filterBy]="filterBy" *ngIf="!addMode" [sessions]="event?.sessions"></session-list>
+  <session-list [eventId]="event?.id" [sortBy]="sortBy" [filterBy]="filterBy" *ngIf="!addMode" [sessions]="event?.sessions"></session-list>
   <create-session *ngIf="addMode" (saveNewSession)="saveNewSession($event)" (cancelAddSession)="cancelAddSession()"></create-session>
-
 </div>
