--- a/ng2-animations/todos/src/app/app.component.html
+++ b/ng2-animations/todos/src/app/app.component.html
@@ -8,22 +8,22 @@
 </header>
 
 <div class="row">
-  <div class="panel">
-    <input type="text">
-    <p id="subtxt">Hit enter to add</p>
+  <div class="panel" [@focusPanel]='state'>
+    <input type="text" placeholder="Add an item here." on-focus='toggleFocus()' on-focusout='toggleFocus()' (keyup.enter)='submitItem($event)'>
+    <p id="subtxt" [@note]='state'>Hit enter to add</p>
   </div>
 </div>
 
 <div class="row">
-  <div class="small-12 medium-6">
+  <!--<div class="small-12 medium-6">
     <div class="panel nplr">
-      <div class="item-container">
+      <div class="item-container" *ngFor="let item of ourItems; let i = index" [attr.data-index]="i" [@itemEnter]="state">
         <div class="identifier"></div>
-        <p>Item here</p>
-        <a>X</a>
+        <p>{{ item }}</p>
+        <a (click)="removeItem($event, i)">X</a>
       </div>
     </div>
-  </div>
+  </div>-->
   <div class="small-12 medium-6 pages">
     <router-outlet></router-outlet>
   </div>
